SERVER-106682: TransactionCoordinator mutex scopes (#37791)

GitOrigin-RevId: eae7299656d510491ab7a11e08187dc370b2b287